--- a/puppies.html
+++ b/puppies.html
@@ -39,7 +39,7 @@
         <section class="puppy-grid">
          <div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/mia_cover.jpg" alt="mia">
+                <img src="images/mia_cover.webp" alt="mia">
                 <h3>Mia</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,800</p>
@@ -48,7 +48,7 @@
         </div>
 			<div class="puppy-box">
             <a href="gallery2.html">
-                <img src="images/letty_cover.jpg" alt="letty">
+                <img src="images/letty_cover.webp" alt="letty">
                 <h3>Letty</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,800</p>
@@ -57,7 +57,7 @@
         </div>
 			<div class="puppy-box">
             <a href="gallery3.html">
-                <img src="images/cipher_cover.jpg" alt="cipher">
+                <img src="images/cipher_cover.webp" alt="cipher">
                 <h3>Cipher</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,800</p>
@@ -66,7 +66,7 @@
         </div>
 			<div class="puppy-box">
             <a href="gallery4.html">
-                <img src="images/dominic_cover.jpg" alt="dom">
+                <img src="images/dominic_cover.webp" alt="dom">
                 <h3>Dom</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -75,7 +75,7 @@
         </div>
 			<div class="puppy-box">
             <a href="gallery5.html">
-                <img src="images/roman_cover.jpg" alt="roman">
+                <img src="images/roman_cover.webp" alt="roman">
                 <h3>Roman</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -84,7 +84,7 @@
         </div>
 			<div class="puppy-box">
             <a href="gallery6.html">
-                <img src="images/han_cover.jpg" alt="han">
+                <img src="images/han_cover.webp" alt="han">
                 <h3>Han</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -93,7 +93,7 @@
         </div>
 			<div class="puppy-box">
             <a href="gallery7.html">
-                <img src="images/tej_cover.jpg" alt="tej">
+                <img src="images/tej_cover.webp" alt="tej">
                 <h3>Tej</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -102,7 +102,7 @@
         </div>
 			<div class="puppy-box">
             <a href="gallery8.html">
-                <img src="images/brian_cover.jpg" alt="brian">
+                <img src="images/brian_cover.webp" alt="brian">
                 <h3>Brian</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,800</p>
@@ -111,16 +111,16 @@
         </div>
 				<!-- <div class="slideshow-container">
                	 <div class="mySlides fade">
-                    <img src="images/mia_cover.jpg" alt="Mia 4" style="width:100%">
+                    <img src="images/mia_cover.webp" alt="Mia 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/mia1.jpg" alt="Mia 1" style="width:100%">
+                    <img src="images/mia1.webp" alt="Mia 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/mia2.jpg" alt="Mia 2" style="width:100%">
+                    <img src="images/mia2.webp" alt="Mia 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/mia3.jpg" alt="Mia 3" style="width:100%">      
+                    <img src="images/mia3.webp" alt="Mia 3" style="width:100%">      
             <h3>Mia</h3>
             <p>Breed: Golden Doodle</p>
             <p>Price: $2,800</p>
@@ -129,22 +129,22 @@
 		</div>			
 		</div>			
 		<div class="puppy-box" onclick="openGallery('letty')">
-                <img src="images/letty_cover.jpg" alt="Puppy 2">
+                <img src="images/letty_cover.webp" alt="Puppy 2">
 				<!-- <div class="slideshow-container"> 
                 <div class="mySlides fade">
-                    <img src="images/letty_cover.jpg" alt="Letty 4" style="width:100%">
+                    <img src="images/letty_cover.webp" alt="Letty 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/letty1.jpg" alt="Letty 1" style="width:100%">
+                    <img src="images/letty1.webp" alt="Letty 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/letty2.jpg" alt="Letty 2" style="width:100%">
+                    <img src="images/letty2.webp" alt="Letty 2" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/letty3.jpg" alt="Letty 3" style="width:100%">
+                    <img src="images/letty3.webp" alt="Letty 3" style="width:100%">
                 </div> 
 				<div class="mySlides fade">
-                    <img src="images/letty4.jpg" alt="Letty 4" style="width:100%">
+                    <img src="images/letty4.webp" alt="Letty 4" style="width:100%">
             <h3>Letty</h3>
             <p>Breed: Golden Doodle</p>
             <p>Price: $2,800</p>
@@ -153,16 +153,16 @@
 		</div>			
 		</div>	
     <div class="puppy-box" onclick="openGallery('cipher')">
-                <img src="images/cipher_cover.jpg" alt="Puppy 3">
+                <img src="images/cipher_cover.webp" alt="Puppy 3">
 				<!--<div class="slideshow-container"> 
                 <div class="mySlides fade">
-                    <img src="images/cipher_cover.jpg" alt="cipher 3" style="width:100%">
+                    <img src="images/cipher_cover.webp" alt="cipher 3" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/cipher1.jpg" alt="Cipher 1" style="width:100%">
+                    <img src="images/cipher1.webp" alt="Cipher 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/cipher2.jpg" alt="Cipher 2" style="width:100%">
+                    <img src="images/cipher2.webp" alt="Cipher 2" style="width:100%">
             <h3>Cipher</h3>
             <p>Breed: Golden Doodle</p>
             <p>Price: $2,800</p>
@@ -171,19 +171,19 @@
 		</div>			
 		</div>			
 		<div class="puppy-box" onclick="openGallery('dom')">
-                <img src="images/dominic_cover.jpg" alt="Puppy 4">
+                <img src="images/dominic_cover.webp" alt="Puppy 4">
 				<!-- <div class="slideshow-container"> 
                 <div class="mySlides fade">
-                    <img src="images/dominic_Cover.jpg" alt="Dom 4" style="width:100%">
+                    <img src="images/dominic_Cover.webp" alt="Dom 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/dom1.jpg" alt="Dom 1" style="width:100%">
+                    <img src="images/dom1.webp" alt="Dom 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/dom2.jpg" alt="Dom 2" style="width:100%">
+                    <img src="images/dom2.webp" alt="Dom 2" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/dom3.jpg" alt="Dom 3" style="width:100%">     
+                    <img src="images/dom3.webp" alt="Dom 3" style="width:100%">     
             <h3>Dom</h3>
             <p>Breed: Golden Doodle</p>
             <p>Price: $2,500</p>
@@ -192,19 +192,19 @@
 		</div>			
 		</div>
         <div class="puppy-box" onclick="openGallery('roman')">
-                <img src="images/roman_cover.jpg" alt="Puppy 5">
+                <img src="images/roman_cover.webp" alt="Puppy 5">
 				<!-- <div class="slideshow-container"> 
                 <div class="mySlides fade">
-                    <img src="images/roman_cover.jpg" alt="Roman 4" style="width:100%">
+                    <img src="images/roman_cover.webp" alt="Roman 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/roman1.jpg" alt="Roman 1" style="width:100%">
+                    <img src="images/roman1.webp" alt="Roman 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/roman2.jpg" alt="Roman 2" style="width:100%">
+                    <img src="images/roman2.webp" alt="Roman 2" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/roman3.jpg" alt="Roman 3" style="width:100%">
+                    <img src="images/roman3.webp" alt="Roman 3" style="width:100%">
                 </div>  
             <h3>Roman</h3>
             <p>Breed: Golden Doodle</p>
@@ -214,19 +214,19 @@
 		</div>			
 		</div>
         <div class="puppy-box" onclick="openGallery('han')">
-                <img src="images/han_cover.jpg" alt="Puppy 6">
+                <img src="images/han_cover.webp" alt="Puppy 6">
 				<!--<div class="slideshow-container"> 
                 <div class="mySlides fade">
-                    <img src="images/han_cover.jpg" alt="Han 4" style="width:100%">
+                    <img src="images/han_cover.webp" alt="Han 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/han1.jpg" alt="Han 1" style="width:100%">
+                    <img src="images/han1.webp" alt="Han 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/han2.jpg" alt="Han2 2" style="width:100%">
+                    <img src="images/han2.webp" alt="Han2 2" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/han3.jpg" alt="Han 3" style="width:100%">
+                    <img src="images/han3.webp" alt="Han 3" style="width:100%">
                 </div>  
             <h3>Han</h3>
             <p>Breed: Golden Doodle</p>
@@ -236,19 +236,19 @@
 		</div>			
 		</div>
 		<div class="puppy-box" onclick="openGallery('tej')">
-                <img src="images/tej_cover.jpg" alt="Puppy 7">
+                <img src="images/tej_cover.webp" alt="Puppy 7">
 				<!-- <div class="slideshow-container"> 
                 <div class="mySlides fade">
-                    <img src="images/tej_cover.jpg" alt="Tej 4" style="width:100%">
+                    <img src="images/tej_cover.webp" alt="Tej 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/tej1.jpg" alt="Tej 1" style="width:100%">
+                    <img src="images/tej1.webp" alt="Tej 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/tej2.jpg" alt="Tej 2" style="width:100%">
+                    <img src="images/tej2.webp" alt="Tej 2" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/tej3.jpg" alt="Tej 3" style="width:100%">
+                    <img src="images/tej3.webp" alt="Tej 3" style="width:100%">
                 </div>  
             <h3>Tej</h3>
             <p>Breed: Golden Doodle</p>
@@ -258,16 +258,16 @@
 		</div>			
 		</div>
         <div class="puppy-box" onclick="openGallery('brian')">
-                <img src="images/brian_cover.jpg" alt="Puppy 8">
+                <img src="images/brian_cover.webp" alt="Puppy 8">
 				<!-- <div class="slideshow-container"> 
                 <div class="mySlides fade">
-                    <img src="images/Brian_cover.jpg" alt="Brian 3" style="width:100%">
+                    <img src="images/Brian_cover.webp" alt="Brian 3" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/brian1.jpg" alt="Brian 1" style="width:100%">
+                    <img src="images/brian1.webp" alt="Brian 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/brian2.jpg" alt="Brian 2" style="width:100%">
+                    <img src="images/brian2.webp" alt="Brian 2" style="width:100%">
                 </div>   
             <h3>Brian</h3>
             <p>Breed: Golden Doodle</p>
@@ -281,7 +281,7 @@
 
             <!-- Repeat for all 8 puppies 
 			<div class="puppy-box" onclick="openGallery('letty')">
-                <img src="images/letty_cover.jpg" alt="Puppy 2">
+                <img src="images/letty_cover.webp" alt="Puppy 2">
                 <h3>Letty</h3>
                <p>Breed: Golden Doodle</p>
                 <p>Price: $2,8800</p>
@@ -289,7 +289,7 @@
             </div>
 			
 			<div class="puppy-box" onclick="openGallery('cipher')">
-                <img src="images/cipher_cover.jpg" alt="Puppy 3">
+                <img src="images/cipher_cover.webp" alt="Puppy 3">
                 <h3>Cipher</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,8800</p>
@@ -297,7 +297,7 @@
             </div>
 			
 			<div class="puppy-box" onclick="openGallery('dom')">
-                <img src="images/dominic_Cover.jpg" alt="Puppy 4">
+                <img src="images/dominic_Cover.webp" alt="Puppy 4">
                 <h3>Dom</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -305,7 +305,7 @@
             </div>
 			
 			<div class="puppy-box" onclick="openGallery('roman')">
-                <img src="images/roman_cover.jpg" alt="Puppy 5">
+                <img src="images/roman_cover.webp" alt="Puppy 5">
                 <h3>Roman</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -313,7 +313,7 @@
             </div>
 			
 			<div class="puppy-box" onclick="openGallery('han')">
-                <img src="images/han_cover.jpg" alt="Puppy 6">
+                <img src="images/han_cover.webp" alt="Puppy 6">
                 <h3>Han</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -321,7 +321,7 @@
             </div>
 			
 			<div class="puppy-box" onclick="openGallery('tej')">
-                <img src="images/tej_Cover.jpg" alt="Puppy 7">
+                <img src="images/tej_Cover.webp" alt="Puppy 7">
                 <h3>Tej</h3>
                  <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -329,7 +329,7 @@
             </div>
 			
 			<div class="puppy-box" onclick="openGallery('brian')">
-                <img src="images/brian_Cover.jpg" alt="Puppy 8">
+                <img src="images/brian_Cover.webp" alt="Puppy 8">
                 <h3>Brian</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
