--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <h1>Welcome to Puppy By Design</h1>
   <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-				<li><a href="parents.html">Parents</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="puppies.html">Puppies for Sale</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">home</a></li>
+				<li><a href="parents.html">parents</a></li>
+                <li><a href="about.html">about Us</a></li>
+                <li><a href="puppies.html">puppies for Sale</a></li>
+                <li><a href="contact.html">contact</a></li>
 				<li><a href="currentPup.html.html">currentPup</a></li>
     </ul>
   </nav>
