Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/currentPup.html
+++ b/currentPup.html
@@ -24,7 +24,7 @@
         <!-- Add your puppy boxes here -->
         <div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/mia_cover.jpg" alt="mia">
+                <img src="images/mia_cover.webp" alt="mia">
                 <h3>Mia</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,800</p>
@@ -34,7 +34,7 @@
         <!-- Repeat for other puppy boxes -->
 		 <div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/letty_cover.jpg" alt="letty">
+                <img src="images/letty_cover.webp" alt="letty">
                 <h3>Letty</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,800</p>
@@ -43,7 +43,7 @@
         </div>
  		 <div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/cipher_cover.jpg" alt="cipher">
+                <img src="images/cipher_cover.webp" alt="cipher">
                 <h3>Cipher</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,800</p>
@@ -52,7 +52,7 @@
         </div>
 		 <div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/dominic_cover.jpg" alt="dom">
+                <img src="images/dominic_cover.webp" alt="dom">
                 <h3>Dom</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -61,7 +61,7 @@
         </div>
 		 <div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/roman_cover.jpg" alt="roman">
+                <img src="images/roman_cover.webp" alt="roman">
                 <h3>Roman</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -70,7 +70,7 @@
         </div>
 		<div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/han_cover.jpg" alt="han">
+                <img src="images/han_cover.webp" alt="han">
                 <h3>Han</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -79,7 +79,7 @@
         </div>
 		<div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/tej_cover.jpg" alt="tej">
+                <img src="images/tej_cover.webp" alt="tej">
                 <h3>Tej</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
@@ -88,7 +88,7 @@
         </div>
 		<div class="puppy-box">
             <a href="gallery1.html">
-                <img src="images/brian_cover.jpg" alt="brian">
+                <img src="images/brian_cover.webp" alt="brian">
                 <h3>Brian</h3>
                 <p>Breed: Golden Doodle</p>
                 <p>Price: $2,500</p>
