--- a/gallery1.html
+++ b/gallery1.html
@@ -54,16 +54,16 @@
 			
 <div class="gallery-container">
   <div class="mySlides fade">
-                    <img src="images/mia_cover.jpg" alt="Mia 4" style="width:100%">
+                    <img src="images/mia_cover.webp" alt="Mia 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/mia1.jpg" alt="Mia 1" style="width:100%">
+                    <img src="images/mia1.webp" alt="Mia 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/mia2.jpg" alt="Mia 2" style="width:100%">
+                    <img src="images/mia2.webp" alt="Mia 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/mia3.jpg" alt="Mia 3" style="width:100%">      
+                    <img src="images/mia3.webp" alt="Mia 3" style="width:100%">      
            
     
 	<script src="scripts.js"></script>				   
