--- a/gallery2.html
+++ b/gallery2.html
@@ -53,16 +53,16 @@
 			
 <div class="gallery-container">
   <div class="mySlides fade">
-                    <img src="images/letty_cover.jpg" alt="Letty 4" style="width:100%">
+                    <img src="images/letty_cover.webp" alt="Letty 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/letty1.jpg" alt="Letty1 1" style="width:100%">
+                    <img src="images/letty1.webp" alt="Letty1 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/letty2.jpg" alt="Letty 2" style="width:100%">
+                    <img src="images/letty2.webp" alt="Letty 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/letty3.jpg" alt="Letty 3" style="width:100%">      
+                    <img src="images/letty3.webp" alt="Letty 3" style="width:100%">      
 	<script src="scripts.js"></script>				   
 	</div>
 	</div>
