--- a/gallery3.html
+++ b/gallery3.html
@@ -54,16 +54,16 @@
 			
 <div class="gallery-container">
   <div class="mySlides fade">
-                    <img src="images/cipher_cover.jpg" alt="cipher 4" style="width:100%">
+                    <img src="images/cipher_cover.webp" alt="cipher 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/cipher1.jpg" alt="cipher 1" style="width:100%">
+                    <img src="images/cipher1.webp" alt="cipher 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/cipher2.jpg" alt="cipher 2" style="width:100%">
+                    <img src="images/cipher2.webp" alt="cipher 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/cipher3.jpg" alt="cipher 3" style="width:100%">      
+                    <img src="images/cipher3.webp" alt="cipher 3" style="width:100%">      
            
     
 	<script src="scripts.js"></script>				   
