--- a/gallery5.html
+++ b/gallery5.html
@@ -54,16 +54,16 @@
 			
 <div class="gallery-container">
   <div class="mySlides fade">
-                    <img src="images/Roman_cover.jpg" alt="Roman 4" style="width:100%">
+                    <img src="images/Roman_cover.webp" alt="Roman 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/Roman1.jpg" alt="Roman 1" style="width:100%">
+                    <img src="images/Roman1.webp" alt="Roman 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/Roman2.jpg" alt="Roman 2" style="width:100%">
+                    <img src="images/Roman2.webp" alt="Roman 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/Roman3.jpg" alt="Roman 3" style="width:100%">      
+                    <img src="images/Roman3.webp" alt="Roman 3" style="width:100%">      
            
     
 	<script src="scripts.js"></script>				   
