--- a/gallery6.html
+++ b/gallery6.html
@@ -54,16 +54,16 @@
 			
 <div class="gallery-container">
   <div class="mySlides fade">
-                    <img src="images/Han_cover.jpg" alt="Han 4" style="width:100%">
+                    <img src="images/Han_cover.webp" alt="Han 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/Han1.jpg" alt="Han 1" style="width:100%">
+                    <img src="images/Han1.webp" alt="Han 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/Han2.jpg" alt="Han 2" style="width:100%">
+                    <img src="images/Han2.webp" alt="Han 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/Han3.jpg" alt="Han 3" style="width:100%">      
+                    <img src="images/Han3.webp" alt="Han 3" style="width:100%">      
            
     
 	<script src="scripts.js"></script>				   
