--- a/gallery7.html
+++ b/gallery7.html
@@ -26,7 +26,7 @@
 </head>
 	
 	<header>
-  <h1>Gallery 6 Tej</h1>
+  <h1>Gallery 7 Tej</h1>
   <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -54,16 +54,16 @@
 			
 <div class="gallery-container">
   <div class="mySlides fade">
-                    <img src="images/Tej_cover.jpg" alt="Tej 4" style="width:100%">
+                    <img src="images/Tej_cover.webp" alt="Tej 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/Tej1.jpg" alt="Tej 1" style="width:100%">
+                    <img src="images/Tej1.webp" alt="Tej 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/Tej2.jpg" alt="Tej 2" style="width:100%">
+                    <img src="images/Tej2.webp" alt="Tej 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/Tej3.jpg" alt="Tej 3" style="width:100%">      
+                    <img src="images/Tej3.webp" alt="Tej 3" style="width:100%">      
            
     
 	<script src="scripts.js"></script>				   
