--- a/gallery4.html
+++ b/gallery4.html
@@ -54,16 +54,16 @@
 			
 <div class="gallery-container">
   <div class="mySlides fade">
-                    <img src="images/dominic_Cover.webp" alt="Roman 4" style="width:100%">
+                    <img src="images/dominic_Cover.webp" alt="dom 4" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/dom1.webp" alt="Roman 1" style="width:100%">
+                    <img src="images/dom1.webp" alt="dom 1" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="images/dom2.webp" alt="Roman 2" style="width:100%">
+                    <img src="images/dom2.webp" alt="dom 2" style="width:100%">
                 </div>			
                 <div class="mySlides fade">
-                    <img src="images/dom3.webp" alt="Roman 3" style="width:100%">      
+                    <img src="images/dom3.webp" alt="dom 3" style="width:100%">      
            
     
 	<script src="scripts.js"></script>				   
