Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/parents.html
+++ b/parents.html
@@ -25,13 +25,13 @@
                 <img src="images/rosie.webp" alt="rosie">
                 <h3>Rosie</h3>
                 <p>Breed: Golden Retriever</p>
-                <p>Description: Rosie is a friendly and energetic Golden with a loving temperament.</p>
+                <p>Description: Our Puppy by Design store offers a wide range of premium pet food products that cater to the diverse dietary needs of your furry friend. Whether you have a cat, dog, bird, or fish, we have got you covered. Our products are all-natural and free from harmful chemicals. Shop now to give your pet the best!</p>
             </div>
             <div class="parent-box">
                 <img src="images/prince.webp" alt="prince">
                 <h3>Prince</h3>
                 <p>Breed: Miniature Poodle</p>
-                <p>Description: Prince is a gentle and affectionate Miniature Poodle known for its calm demeanor.</p>
+                <p>Description: At Puppy by Design, we know that grooming is essential for your pet's health and well-being. We offer a range of grooming services, including bathing, haircuts, nail trimming, and more. Our experienced groomers use only the best products to ensure your pet looks and feels their best. Schedule an appointment today!</p>
             </div>
         </section>
     </main>
