Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 				<li><a href="parents.html">Parents</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="puppies.html">Puppies for Sale</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a>        </li>
             </ul>
         </nav>
     </header>
@@ -24,6 +24,9 @@
             <h2>Info@puppybydesign.com</h2>
             <p>661-569-0648</p>
             <p>Bakersfield, California, United States</p>
+            <p>&nbsp;</p>
+			<a href="https://puppybydesign.com/" class="godaddychat">Chat wth us</a>
+		</main>
         </section>
     </main>
    </body>
