Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
             <p>661-569-0648</p>
             <p>Bakersfield, California, United States</p>
             <p>&nbsp;</p>
+			
+			color: yellow;
+    text-align: center;
+			
 			<a href="https://puppybydesign.com/" class="godaddychat">Chat wth us</a>
 		</main>
         </section>
