--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta font= "cinzel">
+	<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <title>My Puppy Store</title>
     <link rel="stylesheet" href="styles.css">
 
@@ -10,6 +12,8 @@
 	
 
 <header>
+	
+	
   <h1>Welcome to Puppy By Design</h1>
   <nav>
             <ul>
