--- a/puppies.html
+++ b/puppies.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <title>Our Current Litter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,6 +15,7 @@
         }
         .puppy-box {
             width: 200px;
+			font: cinzel;
             text-align: center;
         }
         .puppy-box img {
@@ -32,6 +34,7 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="puppies.html">Puppies for Sale</a></li>
                 <li><a href="contact.html">Contact</a></li>
+				<li><a href="https://puppybydesign.com/">Return</a></li>
     </ul>
     </nav>
     </header>
@@ -108,233 +111,8 @@
                 <p>Price: $2,800</p>
                 <p>MALE</p>
             </a>
-        </div>
-				<!-- <div class="slideshow-container">
-               	 <div class="mySlides fade">
-                    <img src="images/mia_cover.webp" alt="Mia 4" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/mia1.webp" alt="Mia 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/mia2.webp" alt="Mia 2" style="width:100%">
-                </div>			
-                <div class="mySlides fade">
-                    <img src="images/mia3.webp" alt="Mia 3" style="width:100%">      
-            <h3>Mia</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,800</p>
-            <p>FEMALE</p>
-        </div>
-		</div>			
-		</div>			
-		<div class="puppy-box" onclick="openGallery('letty')">
-                <img src="images/letty_cover.webp" alt="Puppy 2">
-				<!-- <div class="slideshow-container"> 
-                <div class="mySlides fade">
-                    <img src="images/letty_cover.webp" alt="Letty 4" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/letty1.webp" alt="Letty 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/letty2.webp" alt="Letty 2" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/letty3.webp" alt="Letty 3" style="width:100%">
-                </div> 
-				<div class="mySlides fade">
-                    <img src="images/letty4.webp" alt="Letty 4" style="width:100%">
-            <h3>Letty</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,800</p>
-            <p>FEMALE</p>
-		</div>
-		</div>			
-		</div>	
-    <div class="puppy-box" onclick="openGallery('cipher')">
-                <img src="images/cipher_cover.webp" alt="Puppy 3">
-				<!--<div class="slideshow-container"> 
-                <div class="mySlides fade">
-                    <img src="images/cipher_cover.webp" alt="cipher 3" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/cipher1.webp" alt="Cipher 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/cipher2.webp" alt="Cipher 2" style="width:100%">
-            <h3>Cipher</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,800</p>
-            <p>FEMALE</p>
-        </div>
-		</div>			
-		</div>			
-		<div class="puppy-box" onclick="openGallery('dom')">
-                <img src="images/dominic_cover.webp" alt="Puppy 4">
-				<!-- <div class="slideshow-container"> 
-                <div class="mySlides fade">
-                    <img src="images/dominic_Cover.webp" alt="Dom 4" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/dom1.webp" alt="Dom 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/dom2.webp" alt="Dom 2" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/dom3.webp" alt="Dom 3" style="width:100%">     
-            <h3>Dom</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,500</p>
-            <p>MALE</p>
-        </div>
-		</div>			
-		</div>
-        <div class="puppy-box" onclick="openGallery('roman')">
-                <img src="images/roman_cover.webp" alt="Puppy 5">
-				<!-- <div class="slideshow-container"> 
-                <div class="mySlides fade">
-                    <img src="images/roman_cover.webp" alt="Roman 4" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/roman1.webp" alt="Roman 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/roman2.webp" alt="Roman 2" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/roman3.webp" alt="Roman 3" style="width:100%">
-                </div>  
-            <h3>Roman</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,500</p>
-            <p>MALE</p>
-        </div>
-		</div>			
-		</div>
-        <div class="puppy-box" onclick="openGallery('han')">
-                <img src="images/han_cover.webp" alt="Puppy 6">
-				<!--<div class="slideshow-container"> 
-                <div class="mySlides fade">
-                    <img src="images/han_cover.webp" alt="Han 4" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/han1.webp" alt="Han 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/han2.webp" alt="Han2 2" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/han3.webp" alt="Han 3" style="width:100%">
-                </div>  
-            <h3>Han</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,500</p>
-            <p>MALE</p>
-        </div>
-		</div>			
-		</div>
-		<div class="puppy-box" onclick="openGallery('tej')">
-                <img src="images/tej_cover.webp" alt="Puppy 7">
-				<!-- <div class="slideshow-container"> 
-                <div class="mySlides fade">
-                    <img src="images/tej_cover.webp" alt="Tej 4" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/tej1.webp" alt="Tej 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/tej2.webp" alt="Tej 2" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/tej3.webp" alt="Tej 3" style="width:100%">
-                </div>  
-            <h3>Tej</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,500</p>
-            <p>Male</p>
-        </div>
-		</div>			
-		</div>
-        <div class="puppy-box" onclick="openGallery('brian')">
-                <img src="images/brian_cover.webp" alt="Puppy 8">
-				<!-- <div class="slideshow-container"> 
-                <div class="mySlides fade">
-                    <img src="images/Brian_cover.webp" alt="Brian 3" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/brian1.webp" alt="Brian 1" style="width:100%">
-                </div>
-                <div class="mySlides fade">
-                    <img src="images/brian2.webp" alt="Brian 2" style="width:100%">
-                </div>   
-            <h3>Brian</h3>
-            <p>Breed: Golden Doodle</p>
-            <p>Price: $2,500</p>
-            <p>MALE</p>
-        </div>
-		</div>			
+       
 		</div>  -->
-
-
-
-            <!-- Repeat for all 8 puppies 
-			<div class="puppy-box" onclick="openGallery('letty')">
-                <img src="images/letty_cover.webp" alt="Puppy 2">
-                <h3>Letty</h3>
-               <p>Breed: Golden Doodle</p>
-                <p>Price: $2,8800</p>
-				<p>FEMALE</p>
-            </div>
-			
-			<div class="puppy-box" onclick="openGallery('cipher')">
-                <img src="images/cipher_cover.webp" alt="Puppy 3">
-                <h3>Cipher</h3>
-                <p>Breed: Golden Doodle</p>
-                <p>Price: $2,8800</p>
-				<p>FEMALE</p>
-            </div>
-			
-			<div class="puppy-box" onclick="openGallery('dom')">
-                <img src="images/dominic_Cover.webp" alt="Puppy 4">
-                <h3>Dom</h3>
-                <p>Breed: Golden Doodle</p>
-                <p>Price: $2,500</p>
-				<p>MALE</p>
-            </div>
-			
-			<div class="puppy-box" onclick="openGallery('roman')">
-                <img src="images/roman_cover.webp" alt="Puppy 5">
-                <h3>Roman</h3>
-                <p>Breed: Golden Doodle</p>
-                <p>Price: $2,500</p>
-				<p>MALE</p>
-            </div>
-			
-			<div class="puppy-box" onclick="openGallery('han')">
-                <img src="images/han_cover.webp" alt="Puppy 6">
-                <h3>Han</h3>
-                <p>Breed: Golden Doodle</p>
-                <p>Price: $2,500</p>
-				<p>MALE</p>
-            </div>
-			
-			<div class="puppy-box" onclick="openGallery('tej')">
-                <img src="images/tej_Cover.webp" alt="Puppy 7">
-                <h3>Tej</h3>
-                 <p>Breed: Golden Doodle</p>
-                <p>Price: $2,500</p>
-				<p>MALE</p>
-            </div>
-			
-			<div class="puppy-box" onclick="openGallery('brian')">
-                <img src="images/brian_Cover.webp" alt="Puppy 8">
-                <h3>Brian</h3>
-                <p>Breed: Golden Doodle</p>
-                <p>Price: $2,500</p>
-				<p>MALE</p>
-            </div>  -->
         </section>
         <div class="pagination">
             <button id="prevPage">Previous</button>
